Fixed hard to read text for mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,7 @@
 @media (max-width: 500px) {
   #animated {
     padding-right: 200px;
+    padding-top: 25px;
   }
 }
 
